# epimicro_fast_loading

./: README.md  core.py  main.py  mne_loader.py  multi_session_tf.py  pyproject.toml  utils.py  view_tf_maps.py  visualization.py
scripts/: compute_tf_single.py  submit_tf_jobs.sh
